--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.12.2",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "node-cron": "^4.2.1",
     "puppeteer": "^24.22.0",
     "qrcode-terminal": "^0.12.0",
