--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.12.2",
+    "firebase": "^12.3.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.6.0",
     "node-cron": "^4.2.1",
