--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build" : "node build.js",
+    "start": "node dist/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,5 +18,8 @@
     "puppeteer": "^24.22.0",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.34.1"
+  },
+  "devDependencies": {
+    "esbuild": "^0.25.10"
   }
 }
